
* Yank raw or decoded message or element to primary clipboard with 'Y'
  or 'y', useful for applying patches.

* Cancel sending with Ctrl + C.

* Yank the Message-ID to the primary clipboard with C-y.

* Make id:Message-ID urls clickable.

* Make Message-ID customizable, and User-Agent optional. These may also
  be customized with a plugin.

* Use Boost::log for logging.

== v0.6 / 2016-07-23

* Use any editor (general XEmbed support in edit-message window): Emacs
  works.

* Plugins: Python and Lua plugins can now be made, parts of ThreadIndex
  and ThreadView are exposed allowing extesion of the user interface and
  advanced customization. Check out the plugins available at GitHub.

* Crypto: GPG encryption and signing is added. Decryption and and
  signature status is shown in greater detail.

* Repository moved to github.com/astroidmail.

* Thread-view: Search email text using '/'

* Synchronize maildir flags if so configured in .notmuch-config.

* Signatures: Include per-account signatures (either included or
  attached).

* Saved searches: Save a search with 'C-S', then browse saved searches
  and stats with 'C-f'. You can also browse search history using Up
  and Down in the search-bar.

* Colorful tags: Tag background color is calculated based on MD5 sum and
  normalized to within a configurable range. The same tag will therefore
  always have the same color.

* Thread-index: load all threads in the background.

* All actions requiring write-access run in the background and wait for
  any reads to finish. All read operations need to wait for any ongoing
  write-operations to finish. All write-operations are therefore
  asynchronous and non-blocking. Read-operations will only block on long
  write operations.

* Tags can be modified on multiple marked threads with + and -.

* Modify tags on single message, they are updated in thread-view and
  thread-index.

* Keybindings modified to be more common #171.
* scss: fix #82: make all variables global.